--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "node-cron": "^2.0.3",
-    "nodemailer": "^5.1.1"
+    "nodemailer": "^5.1.1",
+    "puppeteer": " "
   }
 }
