--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "node-cron": "^2.0.3",
     "nodemailer": "^5.1.1",
+    "nodemon": "^3.0.3",
     "puppeteer": " "
   }
 }
